LINKS TO PROJECTS ADDED

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
             <h2 class="heading">Featured Projects</h2>
             <div class="project-tile">
                 <div class="project-icons"><a href="https://tonykihu.github.io/odin-recipes/"><img src="./images/recipe.jpg" /><br>Odin Recipes</a></div>
-                <div class="project-icons"><a href=""><img src="./images/landing.jpg" /><br>Product Landing Page</a></div>
-                <div class="project-icons"><a href=""><img src="./images/survey.jpg" /><br>Survey Form</a></div>
-                <div class="project-icons"><a href=""><img src="./images/tribute.jpg" /><br>Tribute Page</a></div>
-                <div class="project-icons"><a href=""><img src="./images/documentation.jpg" /><br>Technical Document Page</a></div>
-                <div class="project-icons"><a href=""><img src="./images/loading.jpg" /><br>Coming Up...</a></div>
+                <div class="project-icons"><a href="https://tonykihu.github.io/product-landing-page/"><img src="./images/landing.jpg" /><br>Product Landing Page</a></div>
+                <div class="project-icons"><a href="https://tonykihu.github.io/survey-form/"><img src="./images/survey.jpg" /><br>Survey Form</a></div>
+                <div class="project-icons"><a href="https://tonykihu.github.io/tribute-page/"><img src="./images/tribute.jpg" /><br>Tribute Page</a></div>
+                <div class="project-icons"><a href="https://tonykihu.github.io/technical-documentation-page/"><img src="./images/documentation.jpg" /><br>Technical Document Page</a></div>
+                <div class="project-icons"><a href="https://github.com/tonykihu"><img src="./images/loading.jpg" /><br>Coming Up...</a></div>
             </div>
         </section>
     </main>
