--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <nav id="nav-footer">
             <ul>
                 <li><a href="./pages/contact.html">Contact Me</a></li>
-                <li><a href="">Schedule</a></li>
+                <li><a href="https://calendly.com/antony-ngigi/30min">Schedule</a></li>
                 <li><a href="./pages/about.html">About</a></li>
             </ul>
         </nav>
