--- a/index.html
+++ b/index.html
@@ -47,12 +47,17 @@
                 <div class="project-icons"><a href="https://github.com/tonykihu"><img src="./images/loading.jpg" /><br>Coming Up...</a></div>
             </div>
         </section>
+        <!-- Calendly badge widget begin -->
+        <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+        <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+        <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/antony-ngigi', text: 'Schedule time with me', color: '#0069ff', textColor: '#ffffff', branding: true }); }</script>
+<!-- Calendly badge widget end -->
     </main>
     <footer>
         <nav id="nav-footer">
             <ul>
                 <li><a href="./pages/contact.html">Contact Me</a></li>
-                <li><a href="https://calendly.com/antony-ngigi/30min">Schedule</a></li>
+                <li><a href="https://calendly.com/antony-ngigi/30min" target="_blank">Schedule</a></li>
                 <li><a href="./pages/about.html">About</a></li>
             </ul>
         </nav>
