--- a/pages/contact.html
+++ b/pages/contact.html
@@ -24,6 +24,10 @@
             <label>Book a meeting</label><input type="datetime-local"></input>
             <input id="submit" type="submit" value="Submit" />
         </form>
+        <!-- Calendly inline widget begin -->
+        <div class="calendly-inline-widget" data-url="https://calendly.com/antony-ngigi" style="min-width:320px;height:700px;"></div>
+        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<!-- Calendly inline widget end -->
     </main>
     <footer>
         <nav>
