--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,13 +17,14 @@
     </header>
     <main>
         <h3 class="heading">Contact Form</h3>
+        <!--
         <form>
             <label>Name</label><input type="text" placeholder="John Doe" required></input>
             <label>Email</label><input type="email" placeholder="johndoe@abcde.com" required></input>
             <label>Phone Number</label><input type="tel" placeholder="+1234567890"></input>
             <label>Book a meeting</label><input type="datetime-local"></input>
             <input id="submit" type="submit" value="Submit" />
-        </form>
+        </form> -->
         <!-- Calendly inline widget begin -->
         <div class="calendly-inline-widget" data-url="https://calendly.com/antony-ngigi" style="min-width:320px;height:700px;"></div>
         <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
