--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <div class="project-icons"><a href="https://tonykihu.github.io/survey-form/"><img src="./images/survey.jpg" /><br>Survey Form</a></div>
                 <div class="project-icons"><a href="https://tonykihu.github.io/tribute-page/"><img src="./images/tribute.jpg" /><br>Tribute Page</a></div>
                 <div class="project-icons"><a href="https://tonykihu.github.io/technical-documentation-page/"><img src="./images/documentation.jpg" /><br>Technical Document Page</a></div>
+                <div class="project-icons"><a href="https://tonykihu.github.io/solo-fit/"><img src="./images/weights.jpg" /><br>Solo-Fit</a></div>
                 <div class="project-icons"><a href="https://github.com/tonykihu"><img src="./images/loading.jpg" /><br>Coming Up...</a></div>
             </div>
         </section>
