--- a/pages/projects.html
+++ b/pages/projects.html
@@ -10,20 +10,23 @@
     <header>
         <nav id="navbar">
             <a href="../index.html"><img src="../images/virtual-antony.png" alt="virtual-antony-logo" id="va-logo"></a>
-            <a href="projects.html">Projects</a>
-            <a href="contact.html">Contact</a>
-            <a href="about.html">About</a>
-        </nav>
-    </header>
-    <footer>
-        <nav>
-            <ul>
-                <li><a href="contact.html">Contact Me</a></li>
-                <li><a href="">Schedule</a></li>
+            <ul id="nav-menu">
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
-        <p id="copyright">&copy; Virtual Antony. All Rights Reserved </p>
+    </header>
+    <footer>
+        <nav id="nav-footer">
+            <ul>
+                <li><a href="contact.html">Contact Me</a></li>
+                <li><a href="https://calendly.com/antony-ngigi/30min" target="_blank">Schedule</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+        <p id="copyright">&copy; <a href="index.html"> Virtual Antony</a>. All Rights Reserved </p>
     </footer>
 </body>
 </html>
